# scc

./: .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: cache.cmake  compile_commands.cmake  compiler_warnings.cmake  doxygen.cmake  misc.cmake  options.cmake  sanitizers.cmake  setup_pkg.cmake  static_analyzers.cmake
include/: CMakeLists.txt
include/scc/: scc.hpp  tools.hpp  unique_ptr_vector.hpp  value_ptr.hpp
project_config/: CMakeLists.txt  config.hpp.in
test/: CMakeLists.txt  main.cpp
